lazy load, links word-break

--- a/pages/others_1.html
+++ b/pages/others_1.html
@@ -45,7 +45,7 @@
                                     <strong>¿Qué es el clima?</strong>
                                 <figure>
                                     <img src="../assets/images/other_1/1.jpg" alt="clima" class="responsive"
-                                        width="500">
+                                        width="500" loading="lazy">
                                     <figcaption><i>¿Qué es el clima?</i></figcaption>
                                 </figure> El clima es el conjunto de condiciones atmosféricas que caracterizan una
                                 región <sup><a
@@ -59,12 +59,12 @@
                                 <div class="more-images">
                                     <figure>
                                         <img src="../assets/images/other_1/3.jpg" alt="contaminación" class="responsive"
-                                            width="500">
+                                            width="500" loading="lazy">
                                         <figcaption><i>Contaminación atmosférica.</i></figcaption>
                                     </figure>
                                     <figure>
                                         <img src="../assets/images/other_1/4.jpg" alt="incendios" class="responsive"
-                                            width="500">
+                                            width="500" loading="lazy">
                                         <figcaption><i>Incendio forestal.</i></figcaption>
                                     </figure>
                                 </div>
@@ -84,7 +84,7 @@
                                 <figure>
                                     <img src="../assets/images/other_1/2.png" alt="calentamiento global"
                                         class="responsive"
-                                        width="500">
+                                        width="500" loading="lazy">
                                     <figcaption><i>Calentamiento global. Efecto invernadero.</i></figcaption>
                                 </figure> El calentamiento global se constituye por la absorción de la energía solar por
                                 parte de la tierra. La tierra al calentarse desprende calor a la atmósfera en forma de
@@ -184,7 +184,7 @@
                                             class="biblio-links">8</a></sup>
                                 <figure>
                                     <img src="../assets/images/other_1/cuba.jpg" alt="cuba" class="responsive"
-                                        width="500">
+                                        width="500" loading="lazy">
                                     <figcaption><i>Cambio climático en Cuba</i></figcaption>
                                 </figure>
                                 <ul>
@@ -297,13 +297,13 @@
                                     <figure>
                                         <img src="../assets/images/other_1/basura.jpg" alt="basura electrónica"
                                             class="responsive"
-                                            width="500">
+                                            width="500" loading="lazy">
                                         <figcaption><i>Basura electrónica</i></figcaption>
                                     </figure>
                                     <figure>
                                         <img src="../assets/images/other_1/basura-2.jpg" alt="basura electrónica"
                                             class="responsive"
-                                            width="500">
+                                            width="500" loading="lazy">
                                         <figcaption><i>Basura electrónica</i></figcaption>
                                     </figure>
                                 </div> Basura... </p>
@@ -312,7 +312,7 @@
                                 <figure>
                                     <img src="../assets/images/other_1/basura-3.png" alt="basura electrónica"
                                         class="responsive"
-                                        width="500">
+                                        width="500" loading="lazy">
                                     <figcaption><i>Basura electrónica. Problemas</i></figcaption>
                                 </figure> Problemas... </p>
                                 <p>
