--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         <div class="card-footer">
                             <div class="card-description">
                             </div>
-                            <a href="#" class="card-button">Leer más</a>
+                            <a href="pages/topic_1.html" class="card-button">Leer más</a>
                         </div>
                     </div>
                     <div class="card">
