--- a/pages/topic_1.html
+++ b/pages/topic_1.html
@@ -7,11 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../assets/css/estilos.css">
     <link rel="stylesheet" href="../assets/css/pages.css">
+    <link rel="stylesheet" href="../assets/css/topic-1.css">
     <title>Introducción</title>
 </head>
 
 <body>
-    <header id="home">
+    <header id="home header-1">
         <div class="header-container">
             <nav class="nav-back">
                 <a href="../index.html" class="nav-brand">
@@ -40,6 +41,17 @@
                         <div class="subtopic-title">1. La ciencia y la tecnología como procesos sociales. </div>
                         <div class="subtopic">
                             <p>
+                                <strong>Objetivo General de ECTS</strong>
+                                <br>
+                                “Valorar la dimensión social de la ciencia y la tecnología, tano desde el punto de 
+                                vista de las consiciones de su desarrollo, como de los factores que intervienen en su 
+                                producción y cambio así como los impactos soiales que estas generan, lo que les
+                                permitirá aumir un actitud crítica, comprometida y responsable reflejada en modos
+                                de actuación, ante el importante papel que desempeñan los cientñificos y tecnólogos
+                                en la solución de grandes problemas que afronta la sociendad actual y en su decisiva 
+                                integración al proyecto revolucionario cubano”
+
+                                <br><br>
                                 <strong>¿Qué son los estudios CTS?</strong>
                                 <br>
                                 Campo de investigación académica de carácter interdisciplinario, que busca esclarecer
@@ -107,7 +119,7 @@
                         <div class="subtopic-title">2. Innovación y transferencia. Su impacto social.</div>
                         <div class="subtopic">
                             <p>
-                                <strong>Convención de la ONU sobre cambio climático</strong><br> La Convención Marco
+                                <strong>Problemas sociales del perfil profesional de la carrera</strong><br> La Convención Marco
                                 de las Naciones Unidas sobre el Cambio Climático (CMNUCC) fue adoptada en Nueva York
                                 el 9 de mayo de 1992 y abierta a la firma el 4 de junio de 1992 en Río de Janeiro,
                                 entró en vigor el 21 de marzo de 1994. Permite, entre otras cosas, reforzar la
