--- a/pages/topic_1.html
+++ b/pages/topic_1.html
@@ -219,6 +219,9 @@
                         procesos sociales.</a></div>
                     <div class="aside-links-container"><a href="#subtopic_2" class="aside-links">2. Innovación y transferencia. 
                         Su impacto social.</a></div>
+                    <div class="aside-links-container"><a href="#cont-5" class="aside-links">Vea también</a></div>
+                    <div class="aside-links-container"><a href="#cont-6" class="aside-links">Bibliografía
+                            consultada</a></div>
                 </div>
             </div>
         </aside>
