--- a/pages/topic_1.html
+++ b/pages/topic_1.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <header id="home header-1">
+    <header id="home">
         <div class="header-container">
             <nav class="nav-back">
                 <a href="../index.html" class="nav-brand">
