--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         </div>
                         <div class="card-footer">
                             <div class="card-description"> description... </div>
-                            <a href="#" class="card-button">Leer más</a>
+                            <a href="pages/topic_2.html" class="card-button">Leer más</a>
                         </div>
                     </div>
                     <div class="card">
