iconos, imagenes, navegacion

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="shortcut icon" href="/assets/images/icon/favicon.ico" type="image/x-icon">
         <link rel="stylesheet" href="assets/css/estilos.css">
         <title> Estudios de Ciencia, Tecnología y Sociedad </title>
     </head>
@@ -14,6 +15,9 @@
             <div class="header-container">
                 <nav>
                     <a href="index.html" class="nav-brand ects-link">ECTS</a>
+                    <a href="#" class="menu"><svg xmlns="http://www.w3.org/2000/svg" height="36" width="36" viewBox="0 96 960 960" width="24">
+                            <path fill="white" d="M120 816v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z" />
+                        </svg></a>
                     <div>
                         <ul class="nav-links">
                             <li><a href="#home">Inicio</a>
@@ -22,6 +26,8 @@
                             </li>
                         </ul>
                     </div>
+                    <img src="../assets/images/icon/logo2.jpg" alt="logo" width="50" class="home-logo logo"
+                        loading="lazy">
                 </nav>
                 <div class="home-title">
                     <div class="home-header"> Estudios de Ciencia, Tecnología y Sociedad </div>
@@ -42,7 +48,7 @@
                 <div class="topic-cards">
                     <div class="card">
                         <div class="card-body">
-                            <img src="assets/images/background_3.jpg" alt="" width="300" class="card-image">
+                            <img src="assets/images/cards/card-1.webp" alt="" width="300" height="170" class="card-image">
                             <div class="card-title"> Tema I - Introducción </div>
                         </div>
                         <div class="card-footer">
@@ -53,7 +59,7 @@
                     </div>
                     <div class="card">
                         <div class="card-body">
-                            <img src="assets/images/background_1.jpg" alt="" width="300" class="card-image">
+                            <img src="assets/images/cards/card-2.webp" alt="" width="300" height="170" class="card-image">
                             <div class="card-title"> Tema II - Enfoque social de la ciencia </div>
                         </div>
                         <div class="card-footer">
@@ -63,7 +69,7 @@
                     </div>
                     <div class="card">
                         <div class="card-body">
-                            <img src="assets/images/background_4.webp" alt="" width="300" class="card-image">
+                            <img src="assets/images/cards/card-3.webp" alt="" width="300" height="170" class="card-image">
                             <div class="card-title"> Tema III - Ética y sociedad </div>
                         </div>
                         <div class="card-footer">
@@ -73,7 +79,7 @@
                     </div>
                     <div class="card">
                         <div class="card-body">
-                            <img src="assets/images/background_2.jpg" alt="" width="300" class="card-image">
+                            <img src="assets/images/cards/card-4.webp" alt="" width="300" height="170" class="card-image">
                             <div class="card-title"> Tema IV - Dimensión ambiental </div>
                         </div>
                         <div class="card-footer">
@@ -83,7 +89,7 @@
                     </div>
                     <div class="card">
                         <div class="card-body">
-                            <img src="assets/images/background_5.webp" alt="" width="300" class="card-image">
+                            <img src="assets/images/background_5.webp" alt="" width="300" height="170" class="card-image">
                             <div class="card-title"> Tema V - Enfrentamiento climático </div>
                         </div>
                         <div class="card-footer">
@@ -98,7 +104,7 @@
                 <div class="topic-cards">
                     <div class="card">
                         <div class="card-body">
-                            <img src="assets/images/background_5.webp" alt="" width="300" class="card-image">
+                            <img src="assets/images/cards/card_other-1.webp" alt="" width="300" height="170" class="card-image">
                             <div class="card-title"> Cambio climático y repercusión social </div>
                         </div>
                         <div class="card-footer">
@@ -143,7 +149,7 @@
                     <h3>Créditos</h3>
                     <span>Addiel A. Moldes González - <i>Desarrollador</i></span>
                     <span>Denis A. Alvarez Albelo - <i>Desarrollador</i></span>
-                    <span>Msc. Leonardo Castillo Martínez - <i>Profesor de la asignatura</i></span>
+                    <span>M Sc. Leonardo Castillo Martínez - <i>Profesor</i></span>
                 </div>
             </div>
             <div class="footer-copy">
