--- a/pages/others_1.html
+++ b/pages/others_1.html
@@ -5,8 +5,10 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="shortcut icon" href="../assets/images/icon/favicon.ico" type="image/x-icon">
         <link rel="stylesheet" href="../assets/css/estilos.css">
         <link rel="stylesheet" href="../assets/css/pages.css">
+        <link rel="stylesheet" href="../assets/css/others_1.css">
         <title>Cambio climático y repercusión social</title>
     </head>
 
@@ -18,6 +20,7 @@
                         <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 96 960 960" width="24">
                             <path fill="white" d="M480 896 160 576l320-320 57 56-224 224h487v80H313l224 224-57 56Z" />
                         </svg> Atrás</a>
+                    <img src="../assets/images/icon/logo2.jpg" alt="logo" width="50" class="logo" loading="lazy">
                 </nav>
                 <div class="home-title">
                     <div class="home-header"> Cambio climático y repercusión social</div>
@@ -208,8 +211,10 @@
                                             urbanos en la zona costera, a lo que habría que agregar la alta fragilidad
                                             de nuestros recursos naturales y ecosistemas". </i>
                                     </p>
-                                    <div style="text-align: right;">Dra. Gisela Alonso Domínguez - <i>Presidenta de la
-                                            Agencia de Medio Ambiente</i>
+                                    <div class="quote-footer"><span class="quote-img"><img
+                                                src="../assets/images/citas/gisela.jpg" alt="gisela"
+                                                height="30"></span><span class="quote-footer-text">Dra. Gisela Alonso
+                                            Domínguez - Presidenta de la Agencia de Medio Ambiente</span>
                                     </div>
                                 </blockquote>
                                 </p>
@@ -248,8 +253,12 @@
                                             y progresiva liquidación de sus condiciones naturales de vida: el
                                             hombre".</i>
                                     </p>
-                                    <div style="text-align: right;">Conferencia de Naciones Unidas sobre Medio Ambiente
-                                        y Desarrollo, Río de Janeiro, Brasil, el 12 de junio de 1992</div>
+                                    <div class="quote-footer"><span class="quote-img"><img
+                                                src="../assets/images/citas/fidel.jpg" alt="fidel"
+                                                height="30"></span><span class="quote-footer-text">Conferencia de
+                                            Naciones Unidas sobre Medio Ambiente y Desarrollo, Río de Janeiro, Brasil,
+                                            el 12 de junio de 1992</span>
+                                    </div>
                                 </blockquote>
                                 <blockquote>
                                     <p style="text-align: justify;">
@@ -258,8 +267,12 @@
                                             las condiciones climáticas con efectos catastróficos que ya empezamos a
                                             padecer".</i>
                                     </p>
-                                    <div style="text-align: right;">Conferencia de Naciones Unidas sobre Medio Ambiente
-                                        y Desarrollo, Río de Janeiro, Brasil, 12 de junio de 1992</div>
+                                    <div class="quote-footer"><span class="quote-img"><img
+                                                src="../assets/images/citas/fidel.jpg" alt="fidel"
+                                                height="30"></span><span class="quote-footer-text">Conferencia de
+                                            Naciones Unidas sobre Medio Ambiente y Desarrollo, Río de Janeiro, Brasil,
+                                            12 de junio de 1992</span>
+                                    </div>
                                 </blockquote>
                                 <blockquote>
                                     <p style="text-align: justify;">
@@ -272,8 +285,11 @@
                                             el peligro de ser borrados del mapa mundial por la marea creciente del
                                             calentamiento global." </i>
                                     </p>
-                                    <div style="text-align: right;">Marcha por la Libertad, Estatua de la Emancipación,
-                                        en Bridgetown, Barbados, el día 1ro de agosto de 1998</div>
+                                    <div class="quote-footer"><span class="quote-img"><img
+                                                src="../assets/images/citas/fidel.jpg" alt="fidel"
+                                                height="30"></span><span class="quote-footer-text">Marcha por la
+                                            Libertad, Estatua de la Emancipación, en Bridgetown, Barbados, el día 1ro de
+                                            agosto de 1998</span></div>
                                 </blockquote>
                                 <blockquote>
                                     <p style="text-align: justify;"><i>"El derroche y las sociedades de consumo
@@ -281,8 +297,10 @@
                                             un callejón sin salida, donde el cambio climático y el costo creciente de
                                             los alimentos, conducen a miles de millones de personas hacia los peores
                                             índices de pobreza".</i></p>
-                                    <div style="text-align: right;">Los desastres que amenazan al mundo, 14 de marzo de
-                                        2011 </div>
+                                    <div class="quote-footer"><span class="quote-img"><img
+                                                src="../assets/images/citas/fidel.jpg" alt="fidel"
+                                                height="30"></span><span class="quote-footer-text">Los desastres que
+                                            amenazan al mundo, 14 de marzo de 2011</span></div>
                                 </blockquote>
                                 </p>
                             </div>
@@ -415,6 +433,19 @@
                         </div>
                     </div>
                 </section>
+                <section id="page-nav">
+                    <div class="container page-nav-container">
+                        <span class="previous page-nav"><a href="#page-nav"><svg xmlns="http://www.w3.org/2000/svg"
+                                    height="24" viewBox="0 96 960 960" width="24">
+                                    <path d="M480 896 160 576l320-320 57 56-224 224h487v80H313l224 224-57 56Z" />
+                                </svg><span class="page-nav-word">Anterior</span></a></span>
+                        <span class="next page-nav"><a href="#page-nav"><span class="page-nav-word">Siguiente</span><svg
+                                    xmlns="http://www.w3.org/2000/svg"
+                                    height="24" viewBox="0 96 960 960" width="24">
+                                    <path d="m480 896-57-56 224-224H160v-80h487L423 312l57-56 320 320-320 320Z" />
+                                </svg></a></span>
+                    </div>
+                </section>
             </main>
             <aside>
                 <div class="content">
@@ -454,7 +485,7 @@
                     <h3>Créditos</h3>
                     <span>Addiel A. Moldes González - <i>Desarrollador</i></span>
                     <span>Denis A. Alvarez Albelo - <i>Desarrollador</i></span>
-                    <span>Msc. Leonardo Castillo Martínez - <i>Profesor de la asignatura</i></span>
+                    <span>M Sc. Leonardo Castillo Martínez - <i>Profesor</i></span>
                 </div>
             </div>
             <div class="footer-copy">
