--- a/pages/topic_1.html
+++ b/pages/topic_1.html
@@ -138,7 +138,7 @@
                                                 height="30"></span><span class="quote-footer-text">José Martí</span>
                                     </div>
                                 </blockquote>
-                                <br> Por el importante papel que se les ha asignado a la ciencia y a la tecnología en el
+                                Por el importante papel que se les ha asignado a la ciencia y a la tecnología en el
                                 proyecto de desarrollo social del país, lo que requiere: <br><br>
                                 <ul>
                                     <li>La elaboración de políticas científico- tecnológicas y de innovación que se
